<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="infoSpesa">Dettaglio Spesa</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="intest_addcaten">Aggiungi Categoria Entrata</string>
    <string name="intest_addcatus">Aggiungi Categoria Uscita</string>
    <string name="app_name">GestioneSpese</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="myApp">Gestione Spese</string>
    <string name="data">[Mese,GG]</string>
    <string name="spesa">Spesa</string>
    <string name="DA">DA</string>
    <string name="A">A</string>
    <string name="a_default">Seleziona Conto</string>
    <string name="da_default">Seleziona Conto</string>
    <string name="intest_trasconto">Esegui Trasferimento</string>
    <string name="nome">Nome</string>
    <string name="tipo1">Tipo</string>
    <string name="addConto">Aggiungi Conto</string>
    <string name="conto">Conto</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="entrata">Entrata</string>
    <string name="panoramica">Panoramica</string>
    <string name="report">Report</string>
    <string name="altro">Altro</string>
    <string name="Report1">€0,0</string>
    <string name="title_activity_spesa">Spesa</string>
    <string name="spesa1">Spesa</string>
    <string name="title_activity_aggiungi_spesa">AggiungiSpesa</string>
    <string name="annulla">Annulla</string>
    <string name="salva">Salva</string>
    <string name="symeur">€</string>
    <string name="grafo">Grafico</string>
    <string name="bilancio">Partita Doppia</string>
    <string name="stampa">Stampa Report</string>
    <string name="categoria">Categoria</string>
    <string name="cat_default">Seleziona Categoria</string>
    <string name="creditore">Descrizione</string>
    <string name="selezione">Selezione</string>
    <string name="entrambe">Entrambe</string>
    <string name="uscita">Uscita</string>
    <string name="filtri">Filtra</string>
    <string name="periodo">Seleziona Periodo</string>
    <string name="tipo">Tipo Report</string>
    <string name="data1">Data</string>
    <string name="sel_conto">Paga da</string>
    <string name="sel_conto_default">Seleziona conto</string>
    <string name="note">Nota</string>
    <string name="opt">Opzionale</string>
    <string name="luogo">Luogo</string>
    <string name="luogo1">Inserisci luogo spesa</string>
    <string name="intest_addspesa">Aggiungi Spesa</string>
    <string name="intest_addentrata">Aggiungi Entrata</string>
    <string name="title_activity_entrata">Entrata</string>
    <string name="title_activity_aggiungi_entrata">AggiungiEntrata</string>
    <string name="debitore">Descrizione</string>
    <string name="title_activity_panoramica">Panoramica</string>
    <string name="title_activity_report">Report</string>
    <string name="ordina1">Ordina</string>
    <string name="title">Titolo</string>
    <string name="desc">Descrizione</string>
    <string name="title_activity_conto">Conto</string>
    <string name="title_activity_aggiungi_conto">AggiungiConto</string>
    <string name="title_activity_trasferimento_conto">TrasferimentoConto</string>
    <string name="title_activity_categoria_entrata">Gestione Categorie Entrata</string>
    <string name="title_activity_mappe">Mappe</string>
    <string name="title_activity_altro">Altro</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Apri menù</string>
    <string name="navigation_drawer_close">Chiudi menù</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_categoria">Categoria</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_grafico_torta">GraficoTorta</string>
    <string name="title_activity_grafico_barre">Grafico a Barre</string>
    <string name="title_activity_categoria_uscita">Aggiungi Categoria Uscita</string>
    <string name="title_activity_categoria_us">Categoria Uscita</string>
    <string name="title_activity_partita_doppia">Report Partita Doppia</string>
    <string name="title_activity_impostazioni">Impostazioni</string>

</resources>
