<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    android:padding="0px"
    tools:context=".AggiungiSpesa" >
    <LinearLayout 
        android:id="@+id/intesta_addspesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@color/spesa"
        >
        <TextView
            android:textColor="@color/white"
            android:text="@string/intest_addspesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="8pt"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_addspesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intesta_addspesa"
        android:paddingTop="0px" 
        android:background="@color/spesa_1">

        <Button
            android:id="@+id/btn_annulla"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:background="@color/spesa"
            android:text="@string/annulla"
            android:textColor="@color/white"
             />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <Button
            android:id="@+id/btn_salva"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:background="@color/spesa"
            android:paddingLeft="10dp"
            android:text="@string/salva"
            android:textColor="@color/white"
            android:layout_gravity="right" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/spesa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_addspesa"
        android:orientation="vertical"
        >
    <LinearLayout 
        android:id="@+id/number_addspesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        >
        <TextView 
            android:id="@+id/symeur_addspesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/symeur"
            android:paddingLeft="180dp"
            android:textSize="8pt"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cat_addspesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        >

    <TextView
        android:id="@+id/labCat_addspesa"
        android:layout_width="99dp"
        android:layout_height="match_parent"
        android:text="@string/categoria"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/cate_addspesa1"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:text="@string/cat_default"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <ImageButton
        android:id="@+id/sel_btncat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:src="@android:drawable/ic_menu_edit"
        android:paddingLeft="35dp" android:contentDescription="TODO"/>

    </LinearLayout>

     <LinearLayout
         android:id="@+id/ben_addspesa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp" >

    <TextView
        android:id="@+id/labBen_addspesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creditore"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <Space 
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        />

    <EditText
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="8pt" >

        <requestFocus />
    </EditText>

    </LinearLayout>

     <LinearLayout
         android:id="@+id/data_addspesa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp" >

    <TextView
        android:id="@+id/labData_addspesa"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:text="@string/data1"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/textData_addspesa"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:text="@string/data"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_edit"
        android:background="@color/blue" 
        android:paddingLeft="40dp" 
        />

    </LinearLayout>

     <LinearLayout
         android:id="@+id/selConto_addspesa"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:paddingBottom="10dp" >

    <TextView
        android:id="@+id/labSelConto_addspesa"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:gravity="center|left"
        android:text="@string/sel_conto"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/sel_txtconti"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:gravity="center"
        
        android:textSize="8pt"
        
        android:text="@string/sel_conto_default" />

    <ImageButton
        android:id="@+id/sel_conti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_edit"
        android:background="@color/blue" 
        android:layout_gravity="center"
        android:paddingLeft="25dp"  />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/note_addspesa"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        >

         <TextView
             android:id="@+id/labNote_addspesa"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="@string/note"
             android:textColor="@color/white"
             android:textSize="8pt" />

    <EditText
        android:id="@+id/note1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:paddingLeft="30dp"
        android:text="@string/opt" android:inputType="text"><requestFocus /></EditText>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/luogo_addspesa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/labLuogo_addspesa"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:text="@string/luogo"
                android:textColor="@color/white"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/luogo"
                android:layout_width="189dp"
                android:layout_height="match_parent"
                android:text="@string/luogo1"
                android:textColor="@color/white"
                android:textSize="8pt" />

            <ImageButton
                android:id="@+id/getPosizione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:paddingLeft="35dp"
                android:src="@android:drawable/ic_menu_edit" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
