<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    android:padding="0px"
    tools:context=".AggiungiEntrata" >
    <LinearLayout 
        android:id="@+id/intesta_addentrata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@color/entrata"
        >
        <TextView
            android:textColor="@color/white"
            android:text="@string/intest_addentrata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="8pt"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_addentrata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intesta_addentrata"
        android:paddingTop="0px" 
        android:background="@color/entrata1">

        <Button
            android:id="@+id/btn_annulla"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:background="@color/entrata"
            android:text="@string/annulla"
            android:textColor="@color/white"
             />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <Button
            android:id="@+id/btn_salva"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/entrata"
            android:text="@string/salva"
            android:textColor="@color/white" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/entrata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_addentrata"
        android:orientation="vertical"
        >
    <LinearLayout 
        android:id="@+id/number_addentrata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        >
        <TextView 
            android:id="@+id/symeur_addentrata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/symeur"
            android:paddingLeft="180dp"
            android:textSize="8pt"
            />

        <EditText
            android:id="@+id/importo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cat_addentrata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >

    <TextView
        android:id="@+id/labCat_addentrata"
        android:layout_width="99dp"
        android:layout_height="match_parent"
        android:text="@string/categoria"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/cate_addentrata"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:text="@string/cat_default"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <ImageButton
        android:id="@+id/addCatEn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:paddingLeft="40dp"
        android:src="@android:drawable/ic_menu_edit"
        tools:ignore="ContentDescription" />

    </LinearLayout>

     <LinearLayout
         android:id="@+id/ben_addentrata"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
          >

    <TextView
        android:id="@+id/labBen_addentrata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debitore"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <Space 
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/descrizione"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="8pt" >

        <requestFocus />
    </EditText>

    </LinearLayout>

     <LinearLayout
         android:id="@+id/data_addentrata"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp" >

    <TextView
        android:id="@+id/labData_addentrata"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/data1"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/textData_addentrata"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:text="@string/data"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <ImageButton
        android:id="@+id/entrata_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:paddingLeft="40dp"
        android:src="@android:drawable/ic_menu_edit"
        tools:ignore="ContentDescription" />

    </LinearLayout>

     <LinearLayout
         android:id="@+id/selConto_addentrata"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
          >

    <TextView
        android:id="@+id/labSelConto_addentrata"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/sel_conto"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/selconto"
        android:layout_width="189dp"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:paddingLeft="30dp"
        android:text="@string/sel_conto_default" />

    <ImageButton
        android:id="@+id/select_conto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:paddingLeft="40dp"
        android:src="@android:drawable/ic_menu_edit"
        tools:ignore="ContentDescription" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/note_addentrata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        
        >

         <TextView
             android:id="@+id/labNote_addentrata"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="@string/note"
             android:textColor="@color/white"
             android:textSize="8pt" />

         <EditText
             android:id="@+id/note"
             android:layout_width="179dp"
             android:layout_height="match_parent"
             android:ems="10"
             android:inputType="text"
             android:paddingLeft="15dp"
             android:layout_marginLeft="10dp"
             android:text="@string/opt"
             android:textColor="@color/white"
             android:textSize="8pt" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:paddingLeft="40dp"
        android:src="@android:drawable/ic_menu_edit"
        tools:ignore="ContentDescription" />

    </LinearLayout>
    </LinearLayout>
</RelativeLayout>

